portfolio section's layout issue is resolved

--- a/style.css
+++ b/style.css
@@ -487,6 +487,13 @@ h3 {
 .projectLink:hover .portImg {
   visibility: visible;
 }
+@media (max-width: 759px) {
+  .card-layout {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  }
 
 @media (min-width: 760px) {
 .card-layout {
@@ -497,7 +504,6 @@ h3 {
 
 @media (min-width: 760px) {
   .card {
-    
     margin: 0em 3em !important;
   }
   }
